# gol

./: Cargo.toml
src/: board.rs  main.rs
