[package]
name = "gol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
egui-miniquad = "0.12.0"
miniquad = "0.3.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
